fix: remove overflow on main

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -31,7 +31,6 @@
 }
 
 html, body, #app {
-    height: 100vh;
 }
 
 * {
@@ -39,6 +38,9 @@ html, body, #app {
 }
 
 body {
+    height: 100vh;
+    width: 100vw;
+    overflow: hidden;
     margin: 0;
     display: flex;
     flex-direction: column;
